# workshop_dataquality_jornada

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
app/: funcao.py
docs/: index.md
tests/: test_hello_world.py
